# Geometry

./: .gitmodules  Geometry.cpp  Geometry.cpp~  Geometry.h  Geometry.h~  OtherRotations.cpp  OtherRotations.h  README  README.md  README~  Rotations.cpp  Rotations.h  Transform.cpp~  Transform.h~  keywords.txt  library.properties  library.properties~
.github/workflows/: run_tests.yml
examples/EulerAngles/: EulerAngles.ino
examples/ForwardKinematics/: ForwardKinematics.ino
examples/HowToUse/: HowToUse.ino  HowToUse.ino~
examples/IntegrateGyroData/: IntegrateGyroData.ino  IntegrateGyroData.ino~
examples/InverseDynamics/: InverseDynamics.cpp  InverseDynamics.h  InverseDynamics.ino
examples/KinematicChain/: KinematicChain.ino  KinematicChain.ino~
examples/OtherRotationRepresentations/: ForwardKinematics.ino
examples/PoseGraph/: PoseGraph.cpp  PoseGraph.h  PoseGraph.ino
examples/TFGraph/: TFGraph.ino
test/: Arduino.h  CMakeLists.txt  test_examples.cpp  test_geometry.cpp  test_rotations.cpp
